<resources>
    <string name="app_name">Goo\'s Pet</string>
    <string name="app_login">登录</string>
    <string name="app_register">注册</string>
    <string name="intro_first">你好，很高兴，\n在恰逢其时，遇见你。</string>
    <string name="intro_second">我很笨，没有很大很大的梦想，\n只希望能跟你在一起。</string>
    <string name="intro_third">你是我的注定，我要努力，\n有朝一日成为你的得力助手！</string>
    <string name="intro_fourth">我们的故事，\n即刻开始。</string>
    <string name="intro_dialog_login_btn">登录</string>
    <string name="intro_dialog_psw">密码</string>
    <string name="intro_dialog_psw_again">再输一次密码</string>
    <string name="intro_dialog_account">用户名</string>
    <string name="intro_dialog_social_login">社交帐号登录</string>
    <string name="intro_dialog_register_btn">注册</string>
    <string name="error_empty_info">信息不可为空</string>
    <string name="error_psw_not_equal">两次输入密码不相同</string>
    <string name="error_email_invalid">请输入正确的邮箱</string>
    <string name="tips_net_working">网络连接中，请稍候</string>
    <string name="error_username_repeat">用户名已存在</string>
    <string name="error_email_repeat">邮箱已被注册</string>
    <string name="error_network">网络连接失败</string>
    <string name="tips_register_success">注册成功</string>
    <string name="intro_dialog_email">E-mail</string>
    <string name="tips_error_login">用户名或密码不正确</string>


    <array name="array_intro_tips">
        <item>@string/intro_first</item>
        <item>@string/intro_second</item>
        <item>@string/intro_third</item>
        <item>@string/intro_fourth</item>
    </array>
</resources>
